--- a/client/index.css
+++ b/client/index.css
@@ -1,8 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #ui-title {
     font-family: 'Work Sans', sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
-    font-size: 3rem;
+    font-size: 5rem;
+    border-bottom: 1px grey solid;
+}
+
+#main-container {
+    width: 80vw;
+    padding: 60px;
 }
