--- a/client/index.css
+++ b/client/index.css
@@ -3,6 +3,11 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Work Sans', sans-serif;
+}
+
+p {
+    font-size: 20px;
 }
 
 body {
@@ -13,7 +18,6 @@ body {
 }
 
 #ui-title {
-    font-family: 'Work Sans', sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-size: 5rem;
@@ -44,4 +48,10 @@ input {
 
 input:focus {
     outline: none;
+}
+
+#ui-messages {
+    padding: 30px;
+    border-radius: 10px;
+    background-color: rgb(184, 184, 184);
 }
